fixed bigs with handlebars

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,7 +13,8 @@
             <label for="inputPassword" class="form-label">Password</label>
             <input type="password" class="form-control" id="inputPassword">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Create Account</button>
+        <a href="/login" class="btn btn-success">Already have an account?</a>
     </form>
 </div>
 
