--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
-
-    <div>
-        <h1>This is the Navbar</h1>
-    </div>
-
-
-    {{{body}}}
-  
-
-    <div>
-        <h1>This is the Footer</h1>
-    </div>
+    <title>Dev Weblog</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
+</head>
+
+<body>
+    <div class="wrapper">
+        <header class="hero">
+            <div>
+                <nav class="nav">
+                    <a class="link" href="/">Home</a>
+                    {{#if loggedIn}}
+                    <a class="link" href="/dashboard">Dashboard</a>
+                    {{/if}}
+                    {{#unless loggedIn}}
+                    <a class="link" href="/login">Login</a>
+                    {{/unless}}
+                    {{#unless loggedIn}}
+                    <a class="link" href="/signup">Create Account</a>
+                    {{/unless}}
+                    {{#if loggedIn}}
+                    <a class="link" href="#" id="logout">Logout</a>
+                    {{/if}}
+                </nav>
+            </div>
+            <h1 class="app-title"><i class="fab "></i>Dev Weblog</h1>
+        </header>
+    </div>
+
+        {{{body}}}
+
+
+        <div class="foot">
+            <h1>Thank you for visiting Dev Weblog :)</h1>
+        </div>
+        <script src="/assets/js/main.js"></script>
+
 </body>
+
 </html>
