--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,8 +9,10 @@
 
     {{#each allPosts }}
         <hr/>
+             <a href="/post/{{id}}" style="text-decoration: none;">
              <h1 class="postTitle">{{title}}</h1>
              <p>{{content}}</p>
+             </a>
     {{/each}}
 
 </div>
